--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "gatsby-plugin-postcss": "^2.1.13",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
+    "gatsby-plugin-sharp": "^4.14.0",
     "gatsby-plugin-sitemap": "^2.2.19",
     "gatsby-remark-images": "^3.1.28",
-    "gatsby-plugin-sharp": "^4.14.0",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-responsive-iframe": "^2.2.25",
     "gatsby-source-filesystem": "^2.1.35",
@@ -43,7 +43,8 @@
     "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
-    "react-photoswipe": "^1.3.0"
+    "react-photoswipe": "^1.3.0",
+    "sharp": "^0.30.4"
   },
   "keywords": [
     "gatsby"
