--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
     "react-photoswipe": "^1.3.0",
-    "sharp": "^0.30.4"
+    "sharp": "^0.30.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "keywords": [
     "gatsby"
