--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -306,7 +306,7 @@ collections: # A list of collections the CMS should be able to edit
         widget: 'list'
         fields:
           - { name: image, label: Image, widget: image }
-          - { name: alt, label: Alt, widget: string }
+          - { name: alt, label: Alt, widget: string, required: false }
           - { name: title, label: Title, widget: string, required: false }
       - { label: Excerpt, name: excerpt, widget: text, required: false }
       - { label: Right hand - Notes, name: rightHandNotes, widget: string }
