--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -361,6 +361,7 @@ collections: # A list of collections the CMS should be able to edit
       - { label: Template, name: template, widget: hidden, default: BlogIndex }
       - { label: Title, name: title, widget: string }
       - { label: Subtitle, name: subtitle, widget: string, required: false }
+      - { label: Order, name: order, widget: string }
       - {
           label: Featured Image,
           name: featuredImage,
