--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dom-form-serializer": "^1.0.7",
     "gatsby": "^2.17.7",
     "gatsby-image": "^2.2.30",
-    "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-google-tagmanager": "^2.1.15",
     "gatsby-plugin-netlify": "^2.1.23",
     "gatsby-plugin-netlify-cms": "^4.1.26",
@@ -44,7 +43,9 @@
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
     "react-photoswipe": "^1.3.0",
+    "react-slick": "^0.29.0",
     "sharp": "^0.30.4",
+    "slick-carousel": "^1.8.1",
     "webpack-node-externals": "^3.0.0"
   },
   "keywords": [
