--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "npm ci && npm rebuild sharp --update-binary && npm run build"
 [build.environment]
   YARN_VERSION = "1.3.2"
   YARN_FLAGS = "--no-ignore-optional"
-  NODE_VERSION = "16.0.0"
+  NODE_VERSION = "20.18.1"
