--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "npm ci && npm rebuild sharp --update-binary && npm run build"
+  command = "npm ci --legacy-peer-deps && npm rebuild sharp --update-binary && npm run build"
 [build.environment]
   YARN_VERSION = "1.3.2"
   YARN_FLAGS = "--no-ignore-optional"
